--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -4,7 +4,7 @@
 
   <%= form_with model: @task, url: tasks_path, class: "form" do |form| %>
     <div class="form-group">
-      <%= form.label :title %>
+      <%= form.label :タイトル %>
       <%= form.text_field :title, class: "form-control" %>
     </div>
 
