--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -3,10 +3,13 @@
 
   <div class="calendar">
     <div class="calendar-navigation">
-      <%= link_to "<< 前の月", tasks_path(month: @current_month.prev_month), class: "calendar-navigation-link" %>
-      <%= link_to "次の月 >>", tasks_path(month: @next_month), class: "calendar-navigation-link" %>
+      <%= link_to "<< 前の月", tasks_path(year: @prev_month.year, month: @prev_month.month), class: "calendar-navigation-link" %>
+      <%= link_to "次の月 >>", tasks_path(year: @next_month.year, month: @next_month.month), class: "calendar-navigation-link" %>
       <h2><%= @current_month.strftime("%Y年%m月") %></h2>
-      
+      <%= form_tag tasks_path, method: :get, id: "month-select-form" do %>
+        <%= select_month(@current_month, {use_two_digit_numbers: true}, {name: "month", id: "month-select"}) %>
+        <%= submit_tag "移動" %>
+      <% end %>
     </div>
 
     <% @tasks.group_by { |task| task.due_date.beginning_of_month }.sort.each do |month, tasks| %>
