--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -20,15 +20,21 @@
     <% end %>
       <% tasks.each do |task| %>
         <% if task.due_date.beginning_of_month == month %>
-          <div class="task">
-            <h3><%= link_to task.due_date.strftime("%Y年%m月%d日"), task_path(task) %></h3>
-            <h4><%= task.title %></h4>
-            <p><%= task.description %></p>
-            <p>優先度: <%= task.priority %></p>
+          <div class="card">
+            <div class="card-body">
+              <p class="card-text"><strong>期限:</strong> <%= task.due_date.strftime('%Y年%m月%d日') %>（<%= (task.due_date - Date.today).to_i %>日後）</p>
+              <h5 class="card-title"><%= link_to task.title, task_path(task) %></h5>
+              <p class="card-text"><%= task.description %></p>
+              <p>優先度: <%= task.priority %></p>
+            </div>
           </div>
+          <br>
         <% end %>
       <% end %>
     </div>
+  <% end %>
+  <% if @tasks.empty? %>
+    <p>タスクはありません</p>
   <% end %>
   </div>
 
